--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-js-hw-09</title>
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <a href="./1-gallery.html">GALLERY</a>
+    <a href="./2-form.html">Form</a>
 
     <script type="module" src="./main.js"></script>
   </body>
